--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -4,10 +4,6 @@
 %
 \documentclass[
 ]{book}
-\title{Procedures and Guidelines}
-\author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2022-05-24}
-
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
 \usepackage{iftex}
@@ -80,6 +76,10 @@
 \fi
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
+
+\title{Procedures and Guidelines}
+\author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
+\date{2022-05-26}
 
 \begin{document}
 \maketitle
@@ -165,7 +165,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -188,7 +188,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -308,9 +308,27 @@ When operating in a multi-lingual or non-English environment, this can prove pro
 
 Convention has file naming proceed in the following order, with each element separated by an underscore \texttt{\_}, and words within an element joined with a dash \texttt{-}. The file type is generally added with a period \texttt{.} and is usually automatically generated when an application creates a file.
 
-\begin{longtable}[]{@{}llllll@{}}
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1389}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2222}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1528}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1528}}@{}}
 \toprule
-Element-1 & \_Element-2 & \_Element-3 & \_Element-4 & \_Element-5 & .Element-5 \\
+\begin{minipage}[b]{\linewidth}\raggedright
+Element-1
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\_Element-2
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\_Element-3
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\_Element-4
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\_Element-5
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+.Element-5
+\end{minipage} \\
 \midrule
 \endhead
 Last-Name & \_Date & \_Project & \_File-Contents & \_Version & .File-type \\
@@ -464,26 +482,24 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directories}{%
 \chapter{Directories}\label{directories}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 Directories are just folders; we'll use the terms interchangeably. All of the files on your computer are organized around folders. In some respects, this means that your computer is synonymous with a filing cabinet; you open it up and there are a bunch of folders holding files and sub-folders. Following this analogy, if you were to open your computer--and you were on a Mac--you'd see 16 folders, including the following:
 
 \begin{verbatim}
-Applications
-Users
-home
-Library
-Volumes
-System
-bin
-usr
+Applications/
+Users/
+home/
+Library/
+Volumes/
+System/
+bin/
+usr/
 \end{verbatim}
 
 There's a very good chance you've never seen any of these folders. We call this the root of your file system; these folders don't sit inside of any other folders, they only hold other folders and files.
 
-The folder called \texttt{Users} holds all of the files that you create on your computer. In fact, there is a folder in there named after the user name that you use to log into your computer with. And within that a series of folders that you should be fairly familiar with including a \texttt{Downloads\textbackslash{}} and \texttt{Documents\textbackslash{}} folder. It also includes a \texttt{Desktop\textbackslash{}} folder--your desktop is just another folder containing files, but one that has special status in terms of how those files are shown to you--ie, on your desktop when you start up your computer.
-
-\textbf{Note}
+The folder called \texttt{Users} holds all of the files that you create on your computer. In fact, there is a folder in there named after the user name that you use to log into your computer with. And within that a series of folders that you should be fairly familiar with including a \texttt{Downloads/} and \texttt{Documents/} folder. It also includes a \texttt{Desktop/} folder--your desktop is just another folder containing files, but one that has special status in terms of how those files are shown to you--ie, on your desktop when you start up your computer.
 
 When writing about directories, directory names are frequently followed by a slash--\texttt{/}--to differentiate them from files.
 
@@ -502,7 +518,7 @@ If we were to represent this graphically--as a hierarchy--we'd have something li
 
 Your \textbf{working directory} is the folder you're working in or the folder that holds the file that you have open.
 
-Let's say you create a folder on your \texttt{Desktop} called \texttt{BIOL-125/} to hold all of your coursework for this class. And in it you have another folder for your research project--\texttt{Research-Project/}--in which you have a Word file for keeping notes--\texttt{biol-125\_research-project\_notes.docx}.
+Let's say you create a folder on your \texttt{Desktop/} called \texttt{BIOL-125/} to hold all of your coursework for this class. And in it you have another folder for your research project--\texttt{Research-Project/}--in which you have a Word file for keeping notes--\texttt{biol-125\_research-project\_notes.docx}.
 
 A directory map would now look something like the following:
 
@@ -517,9 +533,9 @@ A directory map would now look something like the following:
 │   │   |   |   |     ├── biol-125_research-project_notes.docx
 \end{verbatim}
 
-When you open your \texttt{Research\_project} folder, we call this your working directory--the directory that holds the files that you are currently working with, or that you currently have access to. If you clicked on your \texttt{Desktop}, your working directory would switch to your \texttt{Desktop}, since we know that your \texttt{Desktop} is just another folder.
+When you open your \texttt{Research\_Project/} folder, we call this your working directory--the directory that holds the files that you are currently working with, or that you currently have access to. If you clicked on your \texttt{Desktop/}, your working directory would switch to your \texttt{Desktop/}, since we know that your \texttt{Desktop/} is just another folder.
 
-This has implications for how the applications that you work with access the files on your computer. If you opened your file \texttt{biol-125\_research-project\_notes.docx}, \texttt{Research-Project} would not only be your working directory, it would be Microsoft Word's working directory for that file. With \texttt{biol-125\_research-project\_notes.docx} open, if you went to \texttt{File\ \textgreater{}\ Open...} in Word, it would prompt you to open a file in the directory \texttt{Research-Project}.
+This has implications for how the applications that you work with access the files on your computer. If you opened your file \texttt{biol-125\_research-project\_notes.docx}, \texttt{Research-Project} would not only be your working directory, it would be Microsoft Word's working directory for that file. With \texttt{biol-125\_research-project\_notes.docx} open, if you went to \texttt{File\ \textgreater{}\ Open...} in Word, it would prompt you to open a file in the directory \texttt{Research-Project}, because this is where the application is looking for working files.
 
 Generally, in day to day life, we don't need to worry about things like working directories. When we conduct research though, and we use tools like \texttt{R}, working directories--and knowing where directories and files are in relation to the directory that you are currently in--have significant implications for how things work and for computational reproducibility.
 
@@ -546,21 +562,97 @@ If you have a file in your \texttt{Analysis/} folder open, \texttt{Analysis/} is
 When talking about file locations, a path tells us where a file lives within a directory structure. Paths can be absolute or relative.
 
 \hypertarget{absolute-paths}{%
-\subsection{Absolute paths}\label{absolute-paths}}
+\subsection*{Absolute paths}\label{absolute-paths}}
+\addcontentsline{toc}{subsection}{Absolute paths}
 
-Absolute paths tell us the location of a file relative to the whole directory structure. Using the example above, the absolute path of \texttt{biol-125\_research-project\_notes.docx} is \texttt{Users/youUserName/Desktop/BIOL-125/Research-Project/}.
+Absolute paths tell us the location of a file relative to the whole directory structure. Using the previous example, the absolute path of \texttt{biol-125\_research-project\_notes.docx} is \texttt{Users/youUserName/Desktop/BIOL-125/Research-Project/}.
 
 \hypertarget{relative-paths}{%
-\subsection{Relative paths}\label{relative-paths}}
+\subsection*{Relative paths}\label{relative-paths}}
+\addcontentsline{toc}{subsection}{Relative paths}
 
 Relative paths on the other hand tell us the location of a file relative a working directory. So, if you're working directory is your Desktop, the relative path of \texttt{biol-125\_research-project\_notes.docx} is \texttt{BIOL-125/Research-Project}.
+
+\hypertarget{set-a-working-directory-in-rstudio}{%
+\section{Set a Working Directory in RStudio}\label{set-a-working-directory-in-rstudio}}
+
+\hypertarget{preferred-method-creating-a-project}{%
+\subsection{Preferred Method: Creating a Project}\label{preferred-method-creating-a-project}}
+
+Let's say you're working on an experiment and you'd like to write a reproducible lab report using Markdown in RStudio. The first step is to create a new R project. An R project is a file that sits in the root directory on your computer. When you open your RStudio session via this project file, it automatically tells R to use that root folder as your working directory. In other words, it tells R to look in this root folder for any files you refer to within your R Markdown script. The biggest benefit to this approach for setting a working directory is that if I decided to move my root folder to another location on my computer or open this folder on a different computer, all of the file paths specified in my R script will still work.
+
+There are two options to create a new R project:
+
+\begin{itemize}
+\tightlist
+\item
+  Start a project in a brand new working directory (create a new project file within a brand new folder)
+\item
+  Associate a project with an existing working directory (create a new project file within an existing folder)
+\end{itemize}
+
+So if you have a bunch of files related to your experiment and these are already saved in a folder on your computer, it makes more sense to create a new project within that existing folder. Alternatively, if you are starting from scratch you might prefer to create a new project within a brand new folder. Let's go through an example of how to create a new project with each method.
+
+\hypertarget{create-a-new-project-in-a-new-folder}{%
+\subsubsection{Create a New Project in a New Folder}\label{create-a-new-project-in-a-new-folder}}
+
+The first step is to open RStudio and select `New Project' from the `File' drop down menu.
+
+\includegraphics{images/D_new-project-1.png}
+
+You will then be asked to specify if you'd like to create a `New Directory' or use an `Existing Directory'. In this case select `New Directory'.
+
+\includegraphics{images/D_new-project-in-new-folder-2.png}
+
+You will then be prompted to choose a project type. Choose `New Project'.
+
+\includegraphics{images/D_new-project-in-new-folder-3.png}
+
+Now name what will be your working directory/root folder according to appropriate \href{https://ubco-biology.github.io/Procedures-and-Guidelines/directory-naming}{naming conventions}. Click `Browse' and select a location to save this folder to on your computer. In this example, I saved the folder to the Desktop.
+
+\includegraphics{images/D_new-project-in-new-folder-4.png}
+
+Then click `Create Project'.
+
+\includegraphics{images/D_new-project-in-new-folder-5.png}
+
+Finally, R will bring you back to the main screen and under the `Files' region (bottom right panel) you will see your new project file. Now R is automatically using your new folder containing the project file as the working directory. As you create new files associated with your experiment, make sure you save them to the root folder that contains this project file.
+
+\includegraphics{images/D_new-project-in-new-folder-6.png}
+
+\hypertarget{create-a-new-project-in-an-existing-folder}{%
+\subsubsection{Create a New Project in an Existing Folder}\label{create-a-new-project-in-an-existing-folder}}
+
+Recall, that the first step is to open RStudio and select `New Project' from the `File' drop down menu.
+
+\includegraphics{images/D_new-project-1.png}
+
+You will then be asked to specify if you'd like to create a `New Directory' or use an `Existing Directory'. In this case select `Existing Directory'.
+
+\includegraphics{images/D_new-project-old-folder-2.png}
+
+Select the folder from your computer that you'd like to use as your working directory for the project.
+
+\includegraphics{images/D_new-project-old-folder-3.png}
+
+Then click `Create Project'.
+
+\includegraphics{images/D_new-project-old-folder-4.png}
+
+Finally, R will bring you back to the main screen and under the `Files' region (bottom right panel) you will see your new project file. Now R is automatically using your new folder containing the project file as the working directory. Remember, as you create new files associated with your experiment, make sure you save them to the root folder that contains this project file.
+
+\includegraphics{images/D_new-project-old-folder-5.png}
+
+If you close RStudio and want to re-open the project you'll need to tell R that you want to use the root folder with the project file in it as your working directory. To do this, you'll need to locate the project file on your computer and open it, or open RStudio and select `Open Project' under the `File' drop down menu.
+
+You may have heard of other methods that can be used to set a working directory in R ie. \texttt{setwd()}. However, the downside of using this method is that it relies on an \href{https://ubco-biology.github.io/Procedures-and-Guidelines/relative-and-absolute-paths}{absolute path} to access your working directory ie. Users/youUserName/Desktop/BIOL-116/Research-Project/. So if you move the root folder, containing all the files related to your experiment, you'll have to edit your R script and change the absolute path. Additionally, if you send this script to a lab partner or colleague they will have to edit the script to match where the root folder is located on their computer. Using an R project instead, negates this problem by creating a \href{https://ubco-biology.github.io/Procedures-and-Guidelines/relative-and-absolute-paths}{relative path} to the root folder.
 
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
-Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
+Now that we've covered naming conventions and have a sense of how our systems are organized around folder structures, let's pretend that you store everything on your computer in a single folder--some of us are probably known to use our desktops for this. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory or folder structures. This helps us save precious time and improve our productivity.
 
 One major aspect of Open Science is ensuring transparency in the research process. This includes sharing files from all the steps of the research lifecycle (i.e.~a priori hypothesis, study design, data, analysis etc.) with others so that our research can be understood and replicated more easily.
 
@@ -576,11 +668,15 @@ The highest-ranking folder is generally called the \textbf{root directory}, or s
 The structure should look something like the following:
 
 \begin{verbatim}
-Project-Folder/Experiment-Data/File-1
-Project-Folder/Experiment-Data/File-2
-Project-Folder/Experiment-Analysis/File-1
-Project-Folder/Experiment-Report/File-1
-Project-Folder/Experiment-Report/File-2
+├── Project-Folder/
+|   ├── Experiment-Data/
+|   |   ├── File-1
+|   |   ├── File-2
+|   ├── Experiment-Analysis/
+|   |   ├── File-1
+|   ├── Experiment-Report/
+|   |   ├── File-1
+|   |   ├── File-2
 \end{verbatim}
 
 Here, our root folder is called Project-Folder and it contains three subdirectories, one for data, Experiment-Data, one for analyses, Experiment-Analysis, and one for a report Experiment-Report. Each subdirectory then contains one or many files.
@@ -954,7 +1050,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1016,9 +1112,21 @@ It is also very likely that we set up an Excel sheet where we recorded the site 
 
 Doing this, we'd end up with a table something like the following:
 
-\begin{longtable}[]{@{}llll@{}}
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.1733}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2800}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2800}}@{}}
 \toprule
-Site & Trout\_Caught\_Day\_1 & Trout\_Caught\_Day\_2 & Trout\_Caught\_Day\_3 \\
+\begin{minipage}[b]{\linewidth}\raggedright
+Site
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Trout\_Caught\_Day\_1
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Trout\_Caught\_Day\_2
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Trout\_Caught\_Day\_3
+\end{minipage} \\
 \midrule
 \endhead
 Mabel-lake & 1 & 3 & 3 \\
@@ -1111,9 +1219,21 @@ Now that's tidy data!
 \subsection*{Wide Data}\label{wide-data-1}}
 \addcontentsline{toc}{subsection}{Wide Data}
 
-\begin{longtable}[]{@{}llll@{}}
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.1857}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}@{}}
 \toprule
-Site & Trout\_Caught\_Day\_1 & Trout\_Caught\_Day\_2 & Trout\_Caught\_Day\_3 \\
+\begin{minipage}[b]{\linewidth}\raggedright
+Site
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Trout\_Caught\_Day\_1
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Trout\_Caught\_Day\_2
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Trout\_Caught\_Day\_3
+\end{minipage} \\
 \midrule
 \endhead
 Mabel-lake & 1 & 3 & 3 \\
@@ -1150,7 +1270,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1365,7 +1485,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1511,7 +1631,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1891,7 +2011,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -1991,7 +2111,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{reference-management-zotero}{%
 \chapter{Reference Management: Zotero}\label{reference-management-zotero}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 Imperative to managing our education and research is managing our readings and references. We can do this manually or we can take advantage of a tool - citation management software - specifically designed to keep your references organized, shareable, and easily citable.
 
@@ -2117,7 +2237,7 @@ You'll see your recently synced citation and associated attachments.
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -2126,7 +2246,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -2135,7 +2255,7 @@ Learn more about copyright at UBC from the \href{https://copyright.ubc.ca/}{UBC 
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2022-05-24}
+\emph{Last updated 2022-05-26}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
@@ -2376,10 +2496,10 @@ Assuming the FN on our microscope is 16 mm, let's calculate the field of view di
 Repeat this process for the remainder of the objectives on your microscope. Your final result should look something like this:
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.24}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.27}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.23}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.26}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2381}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2738}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2262}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2619}}@{}}
 \toprule
 \begin{minipage}[b]{\linewidth}\raggedright
 Ocular-magnification
